[fix] table alignment in index

--- a/resources/scss/partials/_index.scss
+++ b/resources/scss/partials/_index.scss
@@ -20,12 +20,15 @@
   height: 400px;
   .table{
     height: 10px;
-    th{
-      position: sticky;
-      top: 0;
-      background-color: #f5f7fa;
-      color: #627183;
-      font-weight: 400;
+    tr{
+       vertical-align: middle;
+      th{
+        position: sticky;
+        top: 0;
+        background-color: #f5f7fa;
+        color: #627183;
+        font-weight: 400;
+      }
     }
   }
 }
